# cardano-smart-contracts

./: LICENSE  README.md
ivy-token/: cabal.project  hie.yaml  ivy-token.cabal
ivy-token/src/: IvyToken.hs  Main.hs  MintIvy.hs
nft-contest/: CHANGELOG.md  cabal.project  hie.yaml  nft-contest.cabal
nft-contest/src/: Main.hs  NFTContest.hs
