Cabal-Version:      2.4
Name:               nft-contest
Version:            0.1.0.0
Author:              Iliyan Germanov
Maintainer:          iliyan.germanov971@gmail.com
Build-Type:          Simple
Copyright:           © 2022 Iliyan Germanov
License:             MIT
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Main
                     , NFTContest
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , lens
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , prettyprinter
                     , QuickCheck
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise